Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/manifests/app/helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
spec:
  selector:
    app: hello-python
  ports:
  - name: web
    protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
      - name: hello-python
        image: ghcr.io/jasonsmithio/helloflask:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
