Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/manifests/app/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.example.com"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    - uri:
        prefix: /grafana
    - uri:
        prefix: /app
    - uri:
        prefix: /jaeger
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
